Get controller support info for apps and cache in DB
